GNOME Bugzilla – Bug 692267
codecparsers: vc1: fix parser for DQPROFILE in VOPDQUANT
Last modified: 2013-01-24 23:21:24 UTC
Created attachment 234085 [details] [review] codecparsers: vc1: fix parser for DQPROFILE in VOPDQUANT Hi, this patch fixes parse_vopdquant() to correctly parse DQPROFILE, which is 2 bits instead of a single bit. Very trivial and applies to all branches.
commit f3698c62897bcbd5b7ae4c86a401d5220d95b70e Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com> Date: Tue Jan 22 10:11:34 2013 +0100 codecparsers: vc1: fix parser for DQPROFILE in VOPDQUANT. Fix parse_vopdquant() to correctly parse DQPROFILE, which is 2 bits instead of a single bit. https://bugzilla.gnome.org/show_bug.cgi?id=692267 Signed-off-by: Gwenole Beauchesne <gwenole.beauchesne@intel.com>